--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/global.css">
 
-    <base href="../">
+    <!-- <base href="../"> -->
 
     <title>Portfolio Website</title>
 </head>
